overflow-y fixed

--- a/View/CSS/CV.css
+++ b/View/CSS/CV.css
@@ -5,6 +5,7 @@ body {
     background-color: #F0EFEB;
     margin: 0;
     padding: 0;
+    overflow-y: hidden;
 }
 
 
